aggiunto calcolo eta

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>password</title>
   </head>
   <body>
     <h1>Nome =<span id="nome-utente"></span></h1>
     <h1>Cognome =<span id="cognome-utente"></span></h1>
     <h1>Domanda Segreta =<span id="Domanda-segreta"></span></h1>
     <h1>Password Supermegasicurissima e inattcabbile =<span id="passwordgenerata"></span></h1>
+    <h1>Tu hai <span id="tuoianni"></span> anni</h1>
     <script src="script.js" charset="utf-8"></script>
+
   </body>
 </html>
