si possono definire abbellimenti??? xd

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>password</title>
   </head>
   <body>
+    <link rel="stylesheet" href="style.css">
     <h1>Nome =<span id="nome-utente"></span></h1>
     <h1>Cognome =<span id="cognome-utente"></span></h1>
     <h1>Domanda Segreta =<span id="Domanda-segreta"></span></h1>
