--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   </head>
   <body>
     <link rel="stylesheet" href="style.css">
-    <h1>Nome =<span id="nome-utente"></span></h1>
-    <h1>Cognome =<span id="cognome-utente"></span></h1>
-    <h1>Domanda Segreta =<span id="Domanda-segreta"></span></h1>
-    <h1>Password Supermegasicurissima e inattcabbile =<span id="passwordgenerata"></span></h1>
-    <h1>Tu hai <span id="tuoianni"></span> anni</h1>
+    <div class="container">
+      <h1>Nome =<span id="nome-utente"></span></h1>
+      <h1>Cognome =<span id="cognome-utente"></span></h1>
+      <h1>Domanda Segreta =<span id="Domanda-segreta"></span></h1>
+      <h1>Password Supermegasicurissima e inattcabbile =<span id="passwordgenerata"></span></h1>
+      <h1>Tu hai <span id="tuoianni"></span> anni</h1>
+    </div>
+
     <script src="script.js" charset="utf-8"></script>
 
   </body>
